fixed widget styling on firefox

--- a/src/static/css/other_plot.css
+++ b/src/static/css/other_plot.css
@@ -175,19 +175,3 @@ META DATA LABELS
   fill:white;
   font-weight: 700;
 }
-
-// firefox only fixes...
-@-moz-document url-prefix() { 
-  .day_row {
-  fill: url(/#dayGradient) !important;
-}
-
-.dayTitleRect{
- fill:url('/#dayTitleGradient');
-}
-
-.blueTitleBackgound {
-  fill:url(#waveHeightTitleColor);
-}
-
-}
